<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>519</width>
    <height>443</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QWidget" name="verticalLayoutWidget">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>10</y>
     <width>501</width>
     <height>421</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="main_Button">
        <property name="text">
         <string>主界面</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="Book_Button">
        <property name="text">
         <string>添加预约</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="IDQuery_Button">
        <property name="text">
         <string>ID查询</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="NameQuery_Button">
        <property name="text">
         <string>患者查询</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="cancel_button">
        <property name="text">
         <string>取消预约</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QTableWidget" name="tableWidget"/>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
